additional fix to horizontal scrolling

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -12,6 +12,7 @@ body {
   right: 0;
   bottom: 0;
   display: flex;
+  justify-content: center;
   background-color: var(--theme-primary-color);
   overflow-y: auto;
   overflow-x: auto;
